fix: handle tab button when modal is visibile

--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -8,14 +8,12 @@ $modal-close-btn-color-hover: $primary-color;
     align-items: center;
     background-color: rgba($modal-overlay-bg-color, 0.8);
     bottom: 0;
-    // color: #000;
     display: flex;
     justify-content: center;
     left: 0;
     opacity: 0;
     position: fixed;
     right: 0;
-    -webkit-tap-highlight-color: transparent;
     top: 0;
     transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
     visibility: hidden;
@@ -53,8 +51,7 @@ $modal-close-btn-color-hover: $primary-color;
         flex-direction: column;
         height: 100%;
         margin: 20px;
-        // max-height: calc(100% - 40px);
-        max-width: calc(100% - 40px); //600px;
+        max-width: calc(100% - 40px);
         position: relative;
         transition: box-shadow 350ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
 
